--- a/index.html
+++ b/index.html
@@ -29,47 +29,49 @@
     </header>
 
     <hr>
-    <div class="enjoy-tv">
-        <div class="text">
-            <h1>Enjoy on your TV</h1>
-            <br>
-            <h3>Watch on smart TVs, Playstation, Xbox,Chromecast, Apple TV, Blue-ray players and more.</h3>
+    <div class="content1">
+        <div class="enjoy-tv">
+            <div class="text">
+                <h1>Enjoy on your TV</h1>
+                <br>
+                <h3>Watch on smart TVs, Playstation, Xbox,Chromecast, Apple TV, Blue-ray players and more.</h3>
+            </div>
+            <div class="image"><img src="./img/YnyuHL5SthCrDTc6YamguU-1200-80.gif" alt=""></div>
         </div>
-        <div class="image"><img src="./img/YnyuHL5SthCrDTc6YamguU-1200-80.gif" alt=""></div>
-    </div>
-    <hr>
+        <hr>
 
-    <div class="enjoy-mobile">
-        <div class="image"><img src="./img/mobile_download.jpg" alt=""></div>
-        <div class="text">
-            <h1>Download your shows to watch offline.</h1>
-            <br>
-            <h3>Save your favourites easily and always have something to watch.</h3>
+        <div class="enjoy-mobile">
+            <div class="image"><img src="./img/mobile_download.jpg" alt=""></div>
+            <div class="text">
+                <h1>Download your shows to watch offline.</h1>
+                <br>
+                <h3>Save your favourites easily and always have something to watch.</h3>
+            </div>
+
         </div>
-
-    </div>
-    <hr>
+        <hr>
 
 
-    <div class="enjoy-everywhere">
+        <div class="enjoy-everywhere">
 
-        <div class="text">
-            <h1>Watch everywhere.</h1>
-            <br>
-            <h3>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</h3>
+            <div class="text">
+                <h1>Watch everywhere.</h1>
+                <br>
+                <h3>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</h3>
+            </div>
+            <div class="image"><img src="./img/Netflix.png" alt=""></div>
         </div>
-        <div class="image"><img src="./img/Netflix.png" alt=""></div>
-    </div>
-    <hr>
+        <hr>
 
-    <div class="enjoy-children">
-        <div class="image"><img src="./img/AAAABVxdX2WnFSp49eXb1do0euaj-F8upNImjofE77XStKhf5kUHG94DPlTiGYqPeYNtiox-82NWEK0Ls3CnLe3WWClGdiJP.png" alt=""></div>
-        <div class="text">
-            <h1>Create profiles for children.</h1>
-            <br>
-            <h3>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</h3>
+        <div class="enjoy-children">
+            <div class="image"><img src="./img/AAAABVxdX2WnFSp49eXb1do0euaj-F8upNImjofE77XStKhf5kUHG94DPlTiGYqPeYNtiox-82NWEK0Ls3CnLe3WWClGdiJP.png" alt=""></div>
+            <div class="text">
+                <h1>Create profiles for children.</h1>
+                <br>
+                <h3>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</h3>
+            </div>
+
         </div>
-
     </div>
 
     <hr>
@@ -77,44 +79,104 @@
 
     <div class="ask-question">
         <h1>Frequently Asked Questions</h1>
+        <div class="faq">
+            <details>
+                <summary>What is Netflix?</summary>
+                <div>
+                    <p>
+                        Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices. You can watch as much as you want, whenever you want, without a single ad – all for
+                        one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!
+                    </p>
+                </div>
+            </details>
+            <br>
+            <details>
+                <summary>How much does Netflix cost?</summary>
+                <div>
+                    <p>
+                        Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹ 149 to ₹ 649 a month. No extra costs, no contracts.
+                    </p>
+                </div>
+            </details>
+            <br>
+            <details>
+                <summary> Where can I watch?</summary>
+                <div>
+                    <p>
+                        Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media
+                        players and game consoles. You can also download your favourite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
+                    </p>
+                </div>
+            </details>
+            <br>
+            <details>
+                <summary>How do I cancel?</summary>
+                <div>
+                    <p>
+                        Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.
+                    </p>
+                </div>
+            </details>
+            <br>
+            <details>
+                <summary>What can I watch on Netflix?</summary>
+                <div>
+                    <p>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
+                </div>
+            </details>
+            <br>
+            <details>
+                <summary>Is Netflix good for kids?</summary>
+                <div>
+                    <p>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and films in their own space. Kids profiles come with PIN-protected parental controls that let you restrict
+                        the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</p>
+                </div>
+            </details>
+        </div>
     </div>
+
+
 
     <hr>
 
     <footer>
         <div id="foot-que">Questions? Call 000-800-040-1843</div>
         <div id="foot-link">
-            <div id="foot-link1">
-                <ul>
-                    <li class="faq">FAQ</li>
-                    <li class="invest">Investor Relation</li>
-                    <li class="privacy">privacy</li>
-                    <li class="speedtest">Speed Test</li>
-                </ul>
+            <div class="link12">
+                <div id="foot-link1">
+                    <ul>
+                        <li class="faqs">FAQ</li>
+                        <li class="invest">Investor Relation</li>
+                        <li class="privacy">privacy</li>
+                        <li class="speedtest">Speed Test</li>
+                    </ul>
+                </div>
+                <div id="foot-link2">
+                    <ul type="none">
+                        <li class="help">Help Center</li>
+                        <li class="jobs">Jobs</li>
+                        <li class="cookie">Cookie Preferences</li>
+                        <li class="legal">Legal Notice</li>
+                    </ul>
+                </div>
             </div>
-            <div id="foot-link2">
-                <ul>
-                    <li class="help">Help Center</li>
-                    <li class="jobs">Jobs</li>
-                    <li class="cookie">Cookie Preferences</li>
-                    <li class="legal">Legal Notice</li>
-                </ul>
-            </div>
-            <div class="foot-link3">
-                <ul>
-                    <li class="account">Account</li>
-                    <li class="ways-to-watch">Ways to watch</li>
-                    <li class="corporate">Corporate Information</li>
-                    <li class="only-on">Only on Netflix</li>
+            <div class="link34">
+                <div id="foot-link3">
+                    <ul>
+                        <li class="account">Account</li>
+                        <li class="ways-to-watch">Ways to watch</li>
+                        <li class="corporate">Corporate Information</li>
+                        <li class="only-on">Only on Netflix</li>
 
-                </ul>
-            </div>
-            <div class="foot-link4">
-                <ul>
-                    <li class="media-centre">Media-Centre</li>
-                    <li class="terms-use">Terms of Use</li>
-                    <li class="contact-us">Contact Us</li>
-                </ul>
+                    </ul>
+                </div>
+                <div id="foot-link4">
+                    <ul>
+                        <li class="media-centre">Media-Centre</li>
+                        <li class="terms-use">Terms of Use</li>
+                        <li class="contact-us">Contact Us</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="foot-logo">Netflix India</div>
